# DNA-Finder

./: settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/dinoapp/: MainActivity.java  NumberSenderService.java
app/src/main/res/drawable/: circular_button.xml  circular_button_purple.xml
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
